--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ services:
 
   ########################## web client service ####################################
   bible-client-app:
-    container-name: bible-client-app
+    container_name: "bible-client-app"
     build: ./services/bible-client-app
-    port:
+    ports:
       - 8080:8080
     volumes:
       - ./services/bible-client-app/:/app
@@ -13,11 +13,54 @@ services:
 
   ########################### web server service ##################################
   bible-server-app:
-    container_name: bible-server-app
+    container_name: "bible-server-app"
     build: ./services/bible-server-app
-    port:
+    ports:
       - 5000:5000
     volumes:
       - /services/bible-server-app:/app
     restart: always
 
+  ########################## elasticsearch database ###############################
+  elasticsearch:
+    container_name: "elasticsearch"
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.4.0
+    environment:
+      - xpack.security.enabled=true
+      - discovery.type=single-node
+      - ELASTIC_USERNAME=elastic
+      - ELASTIC_PASSWORD=elastic123
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
+    cap_add:
+      - IPC_LOCK
+    ports:
+      - 9200:9200
+      - 9300:9300
+    volumes:
+      - elasticsearch-data:/usr/share/elasticsearch/data
+    restart: always
+
+  ################################## Kibana #######################################
+  kibana:
+    container_name: "kibana"
+    image: docker.elastic.co/kibana/kibana:7.4.0
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+      - XPACK_SECURITY_ENABLED=true
+      - ELASTICSEARCH_USERNAME=elastic
+      - ELASTICSEARCH_PASSWORD=elastic123
+    ports:
+      - 5601:5601
+    depends_on:
+      - elasticsearch
+
+
+volumes:
+  elasticsearch-data:
+    driver: local
