--- a/services/bible-client-app/Dockerfile
+++ b/services/bible-client-app/Dockerfile
@@ -2,10 +2,15 @@ FROM node:16
 
 WORKDIR /app
 
-COPY package.json .
+ENV PATH /app/node_modules/.bin:$PATH
 
-RUN npm i
+COPY package.json .
+COPY package-lock.json .
+
+RUN npm install
 
 COPY . .
 
-EXPOSE 8080
+EXPOSE 3000
+
+CMD ["npm", "start"]
