[packages] - env/pkg/config updated

--- a/services/bible-server-app/.env
+++ b/services/bible-server-app/.env
@@ -1,1 +1,3 @@
-ELASTIC_URI = "https://elastic:elastic123@elasticsearch:92000"
+ELASTIC_URI = "http://elastic:elastic123@elasticsearch:9200"
+SERVER_APP_PORT = "5000"
+SERVER_APP_HOST = "0.0.0.0"
