--- a/services/bible-server-app/package.json
+++ b/services/bible-server-app/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon --legacy-watch --transpile-only ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "elastic:init_data": "ts-node ./scripts/createElasticIndexWithFullBible.ts"
   },
@@ -11,12 +12,17 @@
   "license": "ISC",
   "dependencies": {
     "@elastic/elasticsearch": "^7.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "npmlog": "^6.0.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.33",
+    "@types/npmlog": "^4.1.4",
+    "nodemon": "^2.0.16",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   }
