--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,11 @@ services:
     build: ./services/bible-client-app
     ports:
       - 3000:3000
-    volumes:
-      - ./services/bible-client-app/:/app
+    # volumes:
+    #   - ./services/bible-client-app/:/app
     restart: always
+    depends_on:
+      - elasticsearch
 
   ########################### web server service ##################################
   bible-server-app:
@@ -17,10 +19,12 @@ services:
     build: ./services/bible-server-app/
     ports:
       - 5000:5000
-    volumes:
-      - ./services/bible-server-app/:/app
-      - ./services/bible-server-app/node_modules/:/app/node_modules
+    # volumes:
+    #   - ./services/bible-server-app/:/app
+    #   - ./services/bible-server-app/node_modules/:/app/node_modules
     restart: always
+    depends_on:
+      - elasticsearch
 
   ########################## elasticsearch database ###############################
   elasticsearch:
@@ -60,7 +64,6 @@ services:
       - 5601:5601
     depends_on:
       - elasticsearch
-
 
 volumes:
   elasticsearch-data:
