--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     volumes:
       - ./services/bible-client-app/:/app
     restart: always
+    depends_on:
+      - elasticsearch
 
   ########################### web server service ##################################
   bible-server-app:
@@ -21,6 +23,8 @@ services:
       - ./services/bible-server-app/:/app
       - ./services/bible-server-app/node_modules/:/app/node_modules
     restart: always
+    depends_on:
+      - elasticsearch
 
   ########################## elasticsearch database ###############################
   elasticsearch:
